@@ -50,6 +50,7 @@
      />
 
   <include file="multi_keyword.zcml" />
+  <include file="name.zcml" />
   <include package=".result" />
 
 </configure>
